Updated nanopub validation - breaking change
