# api/resources/nanopubs.py
@@ -7,6 +7,7 @@ import traceback
 import bel.nanopub.validate
 
 import structlog
+
 log = structlog.getLogger(__name__)
 
 
@@ -19,24 +20,35 @@ class NanopubValidateResource(object):
         try:
             data = json.load(req.bounded_stream)
         except ValueError as e:
-            raise falcon.HTTPUnprocessableEntity(title='Cannot process payload', description=f"Cannot process nanopub (maybe an encoding error? please use UTF-8 for JSON payload) error: {str(e)}")
+            raise falcon.HTTPUnprocessableEntity(
+                title="Cannot process payload",
+                description=f"Cannot process nanopub (maybe an encoding error? please use UTF-8 for JSON payload) error: {str(e)}",
+            )
 
-        log.info('Data', data=data)
-        nanopub = data.get('nanopub', None)
-        error_level = data.get('error_level', 'WARNING')
-
-        if nanopub:
+        if data.get("nanopub", None) is not None:
+            response_type = data.get("response_type", "nanopub")
+            error_level = data.get("error_level", "WARNING")
+            nanopub = {"nanopub": data.get("nanopub")}
             try:
                 results = bel.nanopub.validate.validate(nanopub, error_level)
-                log.info(f'Results: {results}')
-                resp.media = {'validation_results': results}
+                log.info(f"Validation results: {results}")
+                if response_type == "nanopub":
+                    nanopub["nanopub"]["metadata"]["gd_validation"] = results
+                    resp.media = nanopub
+                else:
+                    resp.media = {"validation_results": results}
                 resp.status = falcon.HTTP_200
             except Exception as e:
                 log.error(traceback.print_exc())
-                raise falcon.HTTPUnprocessableEntity(title='Cannot process nanopub', validation_results=[], description=f"Cannot process nanopub: {str(e)}")
+                raise falcon.HTTPUnprocessableEntity(
+                    title="Cannot process nanopub", description=f"Cannot process nanopub: {str(e)}"
+                )
 
         else:
-            raise falcon.HTTPBadRequest(title='Cannot process nanopub', validation_results=[], description=f"No nanopub in payload to process. Please check your submission.")
+            raise falcon.HTTPBadRequest(
+                title="Cannot process nanopub",
+                description=f"No nanopub in payload to process. Please check your submission.",
+            )
 
 
 class EdgeResource(object):
@@ -50,7 +62,10 @@ class EdgeResource(object):
         """
 
         if edge_id is None:
-            resp.media = {'title': 'EdgeStore endpoint Error', 'message': 'Must provide an edge id, e.g. /edges/139806548404171878991929958738371273692'}
+            resp.media = {
+                "title": "EdgeStore endpoint Error",
+                "message": "Must provide an edge id, e.g. /edges/139806548404171878991929958738371273692",
+            }
             resp.status = falcon.HTTP_200
             return
 
@@ -59,8 +74,8 @@ class EdgeResource(object):
             resp.media = edge
             resp.status = falcon.HTTP_200
         else:
-            description = 'No edge found for {}'.format(edge_id)
-            resp.media = {'title': 'No Edge', 'message': description}
+            description = "No edge found for {}".format(edge_id)
+            resp.media = {"title": "No Edge", "message": description}
             resp.status = falcon.HTTP_404
 
 
@@ -71,21 +86,28 @@ class EdgesResource(object):
         """GET Edges from EdgeStore"""
 
         # Query parameters
-        node_query = req.get_param('node_query', default='')
-        hops = req.get_param('hops', default=1)
-        direction = req.get_param('direction', default='ANY')
-        if direction not in ['ANY', 'INBOUND', 'OUTBOUND']:
+        node_query = req.get_param("node_query", default="")
+        hops = req.get_param("hops", default=1)
+        direction = req.get_param("direction", default="ANY")
+        if direction not in ["ANY", "INBOUND", "OUTBOUND"]:
             message = "Query parameter: direction must be one of ('ANY', 'INBOUND', 'OUTBOUND')"
-            title = 'Bad query parameter'
+            title = "Bad query parameter"
             raise falcon.HTTPBadRequest(title=title, description=message)
 
-        contains = req.get_param_as_bool('contains') or False
-        filters = req.get_param('filters', default=None)
-        limit = req.get_param_as_int('limit', min=1, max=1000) or 1000
-        offset = req.get_param_as_int('offset', min=0) or 0
+        contains = req.get_param_as_bool("contains") or False
+        filters = req.get_param("filters", default=None)
+        limit = req.get_param_as_int("limit", min=1, max=1000) or 1000
+        offset = req.get_param_as_int("offset", min=0) or 0
 
-        (edges, facets) = services.edges.get_edges(node_query, hops=hops, direction=direction, contains=contains, filters=filters, limit=limit, offset=offset)
+        (edges, facets) = services.edges.get_edges(
+            node_query,
+            hops=hops,
+            direction=direction,
+            contains=contains,
+            filters=filters,
+            limit=limit,
+            offset=offset,
+        )
 
         resp.media = {"edges": edges, "facets": facets, "edge_cnt": len(edges)}
         resp.status = falcon.HTTP_200
-
